--- a/src/index.hbs
+++ b/src/index.hbs
@@ -77,62 +77,510 @@
             </div>
         </div>
         <ul class="m-top-li">
+        </ul>
+    </div>
+</section>
+<section class="m-today">
+    <div class="m-body">
+        <div class="m-tt m-event-t">오늘의 만화</div>
+        <ul class="m-today-c">
             <li>
-                <div class="m-top-gen-tit">제목</div>
-                <div class="m-oneTop" style="background-image: url('./img/m-top.jpg')">
-                    <div class="m-oneTop-lank">1</div>
-                    <div class="m-oneTop-t">
-                        <span>안녕하루</span>
-                        <br>d3d<br>
-                        <a href="#" class="m-oneTop-w">ddd</a></div>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
                 </div>
-                <ul class="m-toplank">
-                    <li>
-                        <div class="m-toplank-no">2</div>
-                        <div class="m-toplank-name">
-                            <div class="m-toplank-name-t"><span>안녕 하루</span>
-                                <br>ddd
-                            </div>
-                            <div class="m-toplank-name-img" style="background-image: url('./img/m-top2.jpg')"></div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="m-toplank-no">2</div>
-                        <div class="m-toplank-name">
-                            <div class="m-toplank-name-t"><span>안녕 하루</span>
-                                <br>ddd
-                            </div>
-                            <div class="m-toplank-name-img" style="background-image: url('./img/m-top2.jpg')"></div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="m-toplank-no">2</div>
-                        <div class="m-toplank-name">
-                            <div class="m-toplank-name-t"><span>안녕 하루</span>
-                                <br>ddd
-                            </div>
-                            <div class="m-toplank-name-img" style="background-image: url('./img/m-top2.jpg')">
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="m-toplank-no">2</div>
-                        <div class="m-toplank-name">
-                            <div class="m-toplank-name-t"><span>안녕 하루</span>
-                                <br>ddd
-                            </div>
-                            <div class="m-toplank-name-img" style="background-image: url('./img/m-top2.jpg')"></div>
-                        </div>
-                    </li>
-                </ul>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+        </ul>
+        <div class="m-tt m-event-t">신규 만화</div>
+        <ul class="m-today-c">
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+        </ul>
+        <div class="m-tt m-event-t">신규 소설</div>
+        <ul class="m-today-c">
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
+            </li>
+            <li>
+                <div class="m-today-c-img"></div>
+                <div class="m-today-c-t">
+                    그 끝에 있는 것
+                    <span><br>BL/로맨스</span>
+                </div>
             </li>
         </ul>
     </div>
 </section>
-<section class="m-today"></section>
-<section class="m-liveTop"></section>
-<section class="m-new"></section>
-<section class="m-check"></section>
+<section class="m-liveTop">
+    <div class="m-body">
+        <div class="m-live-tt m-event-t">
+            오늘 뭐보지? 실시간 만화 TOP 10
+            <span><br>지금 레진독자들이 보는 그 작품</span>
+        </div>
+        <ul class="m-live-cont">
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img" style="background-image: url(./img/m-eve1.jpg);">
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
+<section class="m-new">
+
+</section>
+<section class="m-check">
+    <div class="m-body">
+        <div class="m-live-tt m-event-t">
+            100만명이 선택한 만화
+            <span><br>첫번째로 보셔야 할 작품</span>
+        </div>
+        <ul class="m-live-cont">
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img" style="background-image: url(./img/m-eve1.jpg);">
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
 {{> template/footer}}
 </body>
 </html>
