--- a/src/less/common.less
+++ b/src/less/common.less
@@ -47,14 +47,29 @@ header {
   cursor: pointer;
 }
 
-.fa-circle {
-  font-size: x-small;
-}
-
 .h-tm-btn:hover {
   color: #999;
   border-color: #999999;
 }
+
+.active {
+  border-color: #fff;
+  color: #fff;
+}
+
+.active > i {
+  color: red;
+}
+
+.active:hover {
+  border-color: #fff;
+  color: #fff;
+}
+
+.fa-circle {
+  font-size: x-small;
+}
+
 
 .h-m {
   position: relative;
