--- a/src/less/main.less
+++ b/src/less/main.less
@@ -104,6 +104,10 @@
   border: @cont-sub-border;
 }
 
+.m-check {
+  margin-bottom: 40px;
+}
+
 .m-cont-tt {
   color: @cont-ca-tit;
   font-size: 14px;
@@ -122,7 +126,7 @@
   cursor: pointer;
 }
 
-.m-live-cont-w:hover {
+.m-cont-w:hover {
   text-decoration: underline;
 }
 
