--- a/src/template/header.hbs
+++ b/src/template/header.hbs
@@ -3,7 +3,7 @@
         <div class="h-tm-btn">
             <i class="fa fa-circle"></i> 완전판
         </div>
-        <div class="h-tm-btn">
+        <div class="h-tm-btn active">
             <i class="fa fa-circle"></i> 전연령
         </div>
         <div class="h-tm-btn">
