--- a/src/template/m-topLank.hbs
+++ b/src/template/m-topLank.hbs
@@ -1,6 +1,6 @@
 <li>
     <div class="m-top-gen-tit">{{~genTitle~}}</div>
-    <div class="m-oneTop" style="background-image: url('{{~img~}}}')">
+    <div class="m-oneTop" style="background-image: url('{{~img~}}')">
         <div class="m-oneTop-lank">1</div>
         <div class="m-oneTop-t">
             <span>{{~title~}}</span>
